--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+:root {
+    --yellow: hsl(47, 88%, 63%);
+    --white: hsl(0, 0%, 100%);
+    --gray500: hsl(0, 0%, 42%);
+    --gray950: hsl(0, 0%, 7%);
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--yellow);
+}
