--- a/style.css
+++ b/style.css
@@ -13,8 +13,34 @@
     --gray950: hsl(0, 0%, 7%);
 }
 
+/* Body */
+
 body {
     width: 100%;
     height: 100vh;
     background-color: var(--yellow);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Card */
+
+.card {
+    width: 384px;
+    height: 100px;
+    background-color: var(--white);
+    padding: 24px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    border: 1px solid var(--gray950);
+}
+
+.card img {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
 }
