--- a/style.css
+++ b/style.css
@@ -22,25 +22,84 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Figtree", sans-serif;
+}
+
+p {
+    font-size: 16px;
 }
 
 /* Card */
 
 .card {
-    width: 384px;
-    height: 100px;
+    width: 384px; 
+    height: 474px;
     background-color: var(--white);
     padding: 24px 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     border-radius: 20px;
     border: 1px solid var(--gray950);
+    box-shadow: 8px 8px 0 0 #000;
 }
 
 .card img {
     width: 100%;
     height: 200px;
     border-radius: 10px;
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 12px;
+    margin: 5px 0;
+}
+ 
+
+.card-content .category p {
+    font-size: 14px;
+    font-weight: bold;
+    background-color: var(--yellow);
+    padding: 4px 12px;
+    border-radius: 4px;
+    font-weight: 800;
+}
+
+.card-content .date {
+    font-weight: 500;
+    line-height: 150%;
+}
+
+.card-content .title {
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 150%;
+}
+
+.card-content .description {
+    
+}
+
+
+
+
+
+
+
+
+
+.card-author {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-author .author-image{
+    width: 32px;
+    height: 32px;
 }
