--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ p {
 /* Card */
 
 .card {
-    width: 384px; 
-    height: 474px;
+    width: 384px;  
     background-color: var(--white);
     padding: 24px 24px;
     display: flex;
@@ -43,6 +42,7 @@ p {
     border-radius: 20px;
     border: 1px solid var(--gray950);
     box-shadow: 8px 8px 0 0 #000;
+    gap: 24px;
 }
 
 .card img {
@@ -56,8 +56,7 @@ p {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 12px;
-    margin: 5px 0;
+    gap: 12px; 
 }
  
 
@@ -70,8 +69,7 @@ p {
     font-weight: 800;
 }
 
-.card-content .date {
-    font-weight: 500;
+.card-content .date { 
     line-height: 150%;
 }
 
@@ -82,7 +80,10 @@ p {
 }
 
 .card-content .description {
-    
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    color: var(--gray500);
 }
 
 
@@ -94,12 +95,17 @@ p {
 
 
 .card-author {
-    display: flex;
-    justify-content: space-between;
+    display: flex; 
     align-items: center;
+    gap: 12px;
 }
 
 .card-author .author-image{
     width: 32px;
     height: 32px;
+}
+
+.card-author .username {
+    font-weight: 800;
+    font-size: 14px;
 }
